<resources>
    <string name="app_name">CoolCutz</string>
    <string name="heading">Send your message</string>
    <string name="text1">Full Name</string>
    <string name="text2">Contact Email</string>
    <string name="text3">Your Message</string>
    <string name="btn1">Call us  6243578092</string>
    <string name="btn2">Mail us</string>
    <string name="btn3">Send Message</string>
    <string name="input1">Name</string>
    <string name="input2">Email</string>
    <string name="input3">Message</string>
    <string name="page_name1">Contact us</string>
    <string name="page_name2">Socialize</string>
    <string name="heading2">Socialize with us!</string>
    <string name="link1">Visit our Website</string>
    <string name="link2">Visit us on Facebook</string>
    <string name="link3">Visit us on Twitter</string>
    <string name="link4">Visit us on Instagram</string>
    <string name="link5">Visit us on YouTube</string>
    <string name="back">Cancel</string>
    <string name="location">Location</string>
</resources>